[gd_scene load_steps=15 format=3 uid="uid://b1l5bakx7t3f5"]

[ext_resource type="Texture2D" uid="uid://dqehysc2yinud" path="res://assets/Background1.png" id="1_gd71j"]
[ext_resource type="PackedScene" uid="uid://dpc641ba7og61" path="res://scenes/nodes/house.tscn" id="2_sue42"]
[ext_resource type="PackedScene" uid="uid://dxvtu3aorp5ig" path="res://scenes/bubble.tscn" id="3_4dewu"]
[ext_resource type="Script" uid="uid://dqatpfnmyicma" path="res://scenes/prototyping/shake_manager.gd" id="4_rek3g"]
[ext_resource type="Script" uid="uid://br3iva7bq4f4a" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="4_ugkdu"]
[ext_resource type="Script" uid="uid://d0coeef2inoe0" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="5_f5fe5"]
[ext_resource type="Script" uid="uid://cg4nrodu8o4jr" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="6_6rggq"]
[ext_resource type="Script" uid="uid://b20su2ysl8rsh" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_noise_emitter_2d.gd" id="8_xn62u"]
[ext_resource type="Resource" uid="uid://bvpsai5ewla4o" path="res://resources/noise.tres" id="9_kmi24"]

[sub_resource type="TileSet" id="TileSet_3i002"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_w41qg"]

[sub_resource type="Resource" id="Resource_ggr05"]
script = ExtResource("6_6rggq")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_joyax"]
size = Vector2(641.5, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xn62u"]
size = Vector2(657, 16)

[node name="Joscene" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -2507)
scale = Vector2(2, 2)
texture = ExtResource("1_gd71j")

[node name="House" parent="." instance=ExtResource("2_sue42")]
mass = 1.0
BubbleScene = ExtResource("3_4dewu")

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("house", "area1", "area2", "noise_emitter", "phantom_camera")]
physics_interpolation_mode = 1
position = Vector2(0, -125)
zoom = Vector2(0.5, 0.5)
process_callback = 0
script = ExtResource("4_rek3g")
house = NodePath("../House")
area1 = NodePath("../Area1")
area2 = NodePath("../Area2")
noise_emitter = NodePath("../PhantomCameraNoiseEmitter2D")
noise = ExtResource("9_kmi24")
phantom_camera = NodePath("../PhantomCamera2D")

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("4_ugkdu")
metadata/_custom_type_script = ExtResource("4_ugkdu")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_3i002")

[node name="Boundary3" type="StaticBody2D" parent="."]
position = Vector2(-6, 35)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundary3"]
position = Vector2(11, 0)
shape = SubResource("WorldBoundaryShape2D_w41qg")

[node name="Boundary2" type="StaticBody2D" parent="."]
position = Vector2(-179, 48)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundary2"]
position = Vector2(-141, -26)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_w41qg")

[node name="Boundary" type="StaticBody2D" parent="."]
position = Vector2(6, 22)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundary"]
position = Vector2(314, 12)
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_w41qg")

[node name="PhantomCamera2D" type="Node2D" parent="." node_paths=PackedStringArray("follow_target")]
top_level = true
position = Vector2(0, -125)
script = ExtResource("5_f5fe5")
follow_mode = 5
follow_target = NodePath("../House")
zoom = Vector2(0.5, 0.5)
tween_resource = SubResource("Resource_ggr05")
follow_offset = Vector2(0, -125)
follow_axis_lock = 1
dead_zone_width = 0.5
noise_emitter_layer = 1
metadata/_custom_type_script = ExtResource("5_f5fe5")

[node name="Area1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area1"]
position = Vector2(2.25, -1366)
shape = SubResource("RectangleShape2D_joyax")

[node name="PhantomCameraNoiseEmitter2D" type="Node2D" parent="."]
script = ExtResource("8_xn62u")
noise = ExtResource("9_kmi24")
continuous = true

[node name="Area2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2"]
position = Vector2(4.5, -2627)
shape = SubResource("RectangleShape2D_xn62u")

[connection signal="body_entered" from="Area1" to="Camera2D" method="_on_area_1_body_entered"]
[connection signal="body_entered" from="Area2" to="Camera2D" method="_on_area_2d_body_entered"]

[editable path="House"]
